:construction_worker: fix job/cache/stage name

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 stages:
   - pages
-  - docker:build
-  - docker:deploy
+  - docker-build
+  - docker-deploy
   - sync
 
 variables:
@@ -34,8 +34,8 @@ pages:
   rules:
     - if: $CI_COMMIT_BRANCH == "main" && $ENABLE_DOCS == "true"
 
-docker:build:
-  stage: docker:build
+docker-build:
+  stage: docker-build
   image:
     name: registry.cn-qingdao.aliyuncs.com/xuxiaoweicomcn/kaniko-project-executor:v1.23.1-debug
     entrypoint: [ "" ]
@@ -68,10 +68,10 @@ docker:build:
   rules:
     - if: $CI_COMMIT_BRANCH == "main" && $ENABLE_DOCS_DOCKER == "true"
 
-docker:deploy:
-  stage: docker:deploy
+docker-deploy:
+  stage: docker-deploy
   needs:
-    - job: docker:build
+    - job: docker-build
   image: registry.cn-qingdao.aliyuncs.com/xuxiaoweicomcn/docker:26.1.3-cli
   variables:
     DOCKER_HOST: $DEPLOY_DOCKER_HOST
