--- a/package.json
+++ b/package.json
@@ -22,5 +22,10 @@
   ],
   "devDependencies": {
     "vitepress": "1.2.2"
+  },
+  "dependencies": {
+    "element-plus": "2.8.3",
+    "markdown-it": "14.1.0",
+    "vue": "3.5.5"
   }
 }
